# fhe

./: .gitignore  .gitmodules  CHANGELOG.md  Dockerfile  LICENSE  LLM.md  MIGRATION-PLAN.md  Makefile  OPTIMIZATION.md  README.md  adversarial_test.go  bench_comparison_test.go  bench_optimization_test.go  bench_test.go  bitwise_integers.go  bitwise_test.go  decryptor.go  encryptor.go  evaluator.go  evm_types_test.go  fuzz_test.go  go.mod  gpu_test.go  integer_ops.go  integer_test.go  integers.go  lazy_carry.go  ntt_simd.go  ntt_test.go  package-lock.json  profile.go  pure_go_test.go  random.go  shortint.go  testutil_test.go  tfhe.go  tfhe_test.go  threshold_rng.go  threshold_rng_test.go
.github/workflows/: ci.yml  docker-publish.yml  docs.yml  publish.yml  release.yml
cgo/: fhe.go  luxfhe_bridge.cpp  openfhe.go
cmd/fhe-server/: main.go
cmd/profile/: main.go
docs/: next.config.mjs  package.json  pnpm-lock.yaml
docs/app/: globals.css  layout.tsx
docs/app/docs/: layout.tsx
docs/app/docs/[[...slug]]/: page.tsx
docs/content/docs/: gpu.md  index.mdx  license.md  meta.json
docs/content/docs/sdk/: c.mdx  go.mdx  index.mdx  meta.json  python.mdx  rust.mdx  typescript.mdx  wasm.mdx
docs/lib/: source.ts
docs/public/: CNAME
docs/resources/: README.md
docs/workshop/: LICENSE  README.md
docs/workshop/fhevmjs/src/: constants.js
e2e/: package-lock.json  package.json  vitest.config.ts
e2e/scripts/: start-server.sh
e2e/test/: fhe.test.ts
examples/e2e-tests/: package.json  playwright.config.ts  tsconfig.json
examples/e2e-tests/tests/: helpers.ts  web3-examples.spec.ts
gpu/: blind_rotate.go  blind_rotate_stub.go  blind_rotate_test.go  bsk_cache.go  bsk_cache_stub.go  cmux.go  cmux_stub.go  engine.go  engine_stub.go  external_product.go  memory.go  memory_stub.go  mlx_ops.go  multigpu.go  multigpu_stub.go  ntt.go  ntt_test.go  scheduler.go  scheduler_stub.go
local-dev/: README.md  demo.ts  docker-compose.yml  start-local.sh  start.sh
ml/biometrics/: README.md
ml/concrete-ml/: LICENSE  README.md  UPGRADING.md  pyproject.toml
ml/concrete-ml/.github/ISSUE_TEMPLATE/: release.md
ml/concrete-ml/.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
ml/concrete-ml/.github/workflows/: benchmarks.yaml  cifar_benchmark.yaml  continuous-integration-common.yaml  continuous-integration.yaml  gpu-tests.yaml  llama_finetuning_benchmark.yaml  publish_aws_ami.yaml  refresh-notebooks-gpu.yaml  refresh-notebooks.yaml  refresh-one-notebook.yaml  release.yaml  resnet_hybrid_model.yaml  run_one_use_cases_example.yaml  run_use_cases_examples.yaml  sync_on_push.yaml  weekly_tests.yaml
ml/concrete-ml/ci/: aws_ami_build_component.yaml  slab.toml
ml/concrete-ml/docs/: README.md  SUMMARY.md  conventions.md
ml/concrete-ml/docs/deep-learning/: fhe_assistant.md  fhe_friendly_models.md
ml/concrete-ml/docs/developer/: contributing.md  debug_support_submit_issues.md  documenting.md  project_setup.md
ml/concrete-ml/docs/explanations/: compilation.md  pruning.md
ml/concrete-ml/docs/getting-started/: README.md  concepts.md  pip_installing.md
ml/concrete-ml/docs/guides/: using_gpu.md
ml/concrete-ml/docs/tutorials/: showcase.md
ml/concrete-ml/tests/deployment/: test_client_server.py
ml/concrete-ml/use_case_examples/cifar/: README.md
ml/concrete-ml/use_case_examples/credit_card_approval_prediction/: README.md
ml/concrete-ml/use_case_examples/disease_prediction/: README.md
ml/concrete-ml/use_case_examples/image_filtering/: README.md
ml/concrete-ml/use_case_examples/llm/: README.md
ml/concrete-ml/use_case_examples/lora_finetuning/: README.md
ml/concrete-ml/use_case_examples/sentiment_analysis_with_transformer/: README.md
ml/concrete-ml/use_case_examples/titanic/: README.md
ml/concrete-ml/use_case_examples/white_paper_experiment/: README.md
ml/extensions/: LICENSE  README.md  pyproject.toml
ml/extensions/.github/workflows/: ci.yaml  release.yml
ml/extensions/ci/: slab.toml
ml/extensions/rust/: Cargo.toml
proto/decryption-oracle/: Makefile  go.mod
proto/decryption-oracle/go/oracle/: oracle.pb.go  oracle_grpc.pb.go
proto/decryption-oracle/proto/oracle/: oracle.proto
proto/decryption-oracle/rust/: Cargo.toml  build.rs
proto/decryption-oracle/rust/src/: lib.rs
scaffold-eth/: README.md
scripts/: flatten-repos.sh
sdk/: README.md
sdk/c/: CMakeLists.txt  luxfhe-config.cmake.in  luxfhe.pc.in
sdk/c/examples/: CMakeLists.txt  cpp_test  cpp_test.cpp  example_basic.c  example_comparison.c
sdk/c/include/: luxfhe.h
sdk/c/lib/: libluxfhe.h
sdk/c/src/: luxfhe.go
sdk/c/tests/: CMakeLists.txt  test_basic.c
sdk/python/: README.md  pyproject.toml
sdk/python/luxfhe/: __init__.py  core.py
sdk/python/luxfhe.egg-info/: PKG-INFO
sdk/relayer/: LICENSE  README.md  package.json
sdk/relayer/.github/ISSUE_TEMPLATE/: bug_report.md
sdk/relayer/.github/workflows/: cdn.yml  test-cdn.yml
sdk/relayer/docs/: initialization.md  public-decryption.md  sdk-overview.md  user-decryption.md  webapp.md  webpack.md
sdk/relayer/src/: _version.ts  index.test.ts  index.ts
sdk/relayer/src/errors/: RelayerErrorBase.ts
sdk/relayer/src/relayer/: handles.test.ts  publicDecrypt.test.ts  userDecrypt.test.ts
sdk/relayer/src/sdk/: FhevmHandle.ts
sdk/relayer/src/test/v1/: mockRoutes.ts
sdk/relayer/src/types/: relayer.d.ts
sdk/rust/: Cargo.toml  build.rs
sdk/rust/src/: lib.rs
sdk/rust/tests/: integration_test.rs
sdk/typescript/: README.md  package-lock.json  package.json  tsconfig.json
sdk/typescript/src/: index.test.ts  index.ts  luxfhe.ts  types.ts  wasm-loader.ts
sdk/wasm/: main.go
server/: server.go
tests/fhevm-suite/: README.md  SECURITY.md
tests/fhevm-suite/.github/: actionlint.yml
tests/fhevm-suite/.github/workflows/: docker-e2e-image.yml
tests/fhevm-suite/e2e/: package.json
tests/fhevm-suite/e2e/contracts/: TestAsyncDecrypt.sol
tests/fhevm-suite/e2e/test/: instance.ts  signers.ts  types.ts
tests/fhevm-suite/e2e_old/: LICENSE.md  hardhat.config.ts  package.json
tests/fhevm-suite/e2e_old/contracts/: AsyncDecrypt.sol
(+35 files in other folders)
